# autosampler

./: LICENSE  README.md  pyproject.toml
src/autosampler/: __init__.py  __main__.py  audio.py  cli.py  devices.py  models.py  multisample.py  notes.py  recorder.py
tests/: test_notes.py
